@@ -138,13 +138,18 @@ typedef enum amplifier_count
   KERNEL_BFS                        = 1024,
   KERNEL_COMBS                      = 1024,
   KERNEL_RULES                      = 256,
-  KERNEL_THREADS_MAX_CPU            = 1,
-  KERNEL_THREADS_MAX_GPU            = 8,  // ex: intel integrated
-  KERNEL_THREADS_MAX_GPU_NV         = 32, // optimized NV  size: warps
-  KERNEL_THREADS_MAX_GPU_AMD        = 64, // optimized AMD size: wavefronts
-  KERNEL_THREADS_MAX_OTHER          = 8,  // ex: intel MIC
 
 } amplifier_count_t;
+
+typedef enum native_threads
+{
+  KERNEL_THREADS_NATIVE_CPU         = 1,
+  KERNEL_THREADS_NATIVE_GPU         = 8,  // ex: intel integrated
+  KERNEL_THREADS_NATIVE_GPU_NV      = 32, // optimized NV  size: warps
+  KERNEL_THREADS_NATIVE_GPU_AMD     = 64, // optimized AMD size: wavefronts
+  KERNEL_THREADS_NATIVE_OTHER       = 8,  // ex: intel MIC
+
+} native_threads_t;
 
 typedef enum vendor_id
 {
@@ -923,6 +928,7 @@ typedef struct hc_device_param
   u64     device_global_mem;
   u32     device_maxclock_frequency;
   size_t  device_maxworkgroup_size;
+  u64     device_local_mem_size;
 
   u32     vector_width;
 
